# securecpp

./: .gitignore  README.md
1_exploit/: CMakeLists.txt  README.md  stack_overflow.cpp  stack_overflow_bypass_aslr.cpp  stack_overflow_bypass_canary.cpp  stack_overflow_bypass_nx.cpp
2_coding/: CMakeLists.txt
2_coding/2_1_strings/2_1_2_iterators/: iterator_invalidated_erase_fix.cpp  iterator_invalidated_insert.cpp
2_coding/2_1_strings/2_1_3_out_of_bounds/: out_of_range.cpp
2_coding/2_1_strings/2_1_5_string_view/: string_view_null_termination.cpp
2_coding/2_1_strings/2_1_6_size/: size.cpp
2_coding/2_2_memory/2_2_2_use_after_free/: range_for.cpp
2_coding/2_2_memory/2_2_4_placement_new/: aligned_buffer.cpp
2_coding/2_2_memory/2_2_6_double_delete/: double_delete.cpp
2_coding/2_3_initialization/2_3_1_init/: global_ub2.cpp  init.cpp
2_coding/2_3_initialization/2_3_2_narrowing/: narrowing.cpp
2_coding/2_4_arithmetics/2_4_2_signed/: signed.cpp
2_coding/2_4_arithmetics/2_4_3_bits/: bitshift.cpp
2_coding/2_4_arithmetics/2_4_4_conversion/: type_conversion.cpp
2_coding/2_4_arithmetics/tools/: sizeof.cpp
2_coding/2_5_threading/2_5_2_synchronization/: shared_ptr.cpp  stack_race_condition.cpp
2_coding/2_5_threading/2_5_3_deadlocks/: endless_wait.cpp
2_coding/2_6_files/2_6_2_races/: races.cpp
2_coding/2_7_crypto/2_7_1_symmetric_encryption/: chacha20.sh
2_coding/2_7_crypto/2_7_3_hashing/: hash.sh  hash_mac.sh
2_coding/2_7_crypto/2_7_4_hashing_with_key/: kdf.sh
2_coding/2_7_crypto/2_7_5_signature/: ecdsa.sh
2_coding/2_7_crypto/2_7_6_random/: random.cpp
2_coding/2_7_crypto/tools/: text2hex.sh
2_coding/arithmetics/: floats.cpp
2_coding/crypto/: aes_cbc.sh  rand.sh  rsa.sh  speed_test.sh  tls_client.sh  tls_server.sh
2_coding/crypto/data/: iv128.txt  key128.txt
2_coding/initialization/: narrowing.cpp
2_coding/memory/: double_delete.cpp  placement_new.cpp
2_coding/strings/: iterator_invalidated_insert_fix.cpp  null_pointer_init.cpp  out_of_range.cpp  sso_stack_overflow.cpp  string_view_dangling.cpp
3_patterns/: CMakeLists.txt
3_patterns/3_2_10_policy/: selinux_policy.h
3_patterns/3_2_11_secure_storage/: encrypted_storage.cpp  main.cpp
3_patterns/3_2_1_single_use_object/: secure_data.h
3_patterns/3_2_3_value_object/: main.cpp
3_patterns/cmake/: CheckSeLinux.cmake
3_patterns/policy/: composite_policy.h  policy.h
3_patterns/policy/selinux/: policy.sh  policy_selinux.spec
3_patterns/secure_storage/: json_storage.cpp  storage.h
3_patterns/value_object/: main.cpp
4_tools/4_1_code/: main_bad.cpp  main_formated.cpp
4_tools/4_2_sast/: analize.sh  main.cpp
4_tools/4_2_sast/linter/: uninitialized.cpp
4_tools/4_3_compile/: main.cpp
4_tools/4_4_dast/: CMakeLists.txt  build_and_run_with_asan.sh
4_tools/linter/: analize.sh
4_tools/sast/: CMakeLists.txt  analize.sh
coding/: CMakeLists.txt
coding/arithmetics/: floats.cpp  signed.cpp  type_conversion.cpp  unsigned.cpp
coding/crypto/: aes_cbc.sh  aes_ctr.sh  aes_ecb.sh  chacha20.sh  dh.sh  ecdh.sh  ecdsa.sh  eddsa.sh  hash.cpp  hash_pass.sh  passwd.sh  random.cpp  rsa.sh  rsa_pss.sh  speed_test.sh  tls_server.sh
coding/crypto/data/traffic/: tls_1_2.pcapng  tls_1_3.pcapng
coding/files/: paths.cpp  races.cpp
coding/initialization/: global_ub1.cpp  init.cpp  narrowing.cpp
coding/memory/: aligned_buffer.cpp  alloca.cpp  delete.cpp  smart_ptr_array.cpp  smart_ptr_dangling.cpp  uaf_temporary.cpp
coding/strings/: iterator_invalidated_erase.cpp  iterator_invalidated_erase_fix.cpp  iterator_invalidated_insert.cpp  iterator_invalidated_insert_fix.cpp  null_pointer_init_fix.cpp  sso_stack_overflow.cpp  string_view_dangling.cpp
coding/threading/: multiple_locks.cpp  recursive_lock.cpp  shared_ptr.cpp  stack_race_condition.cpp  terminate.cpp
exploit/: CMakeLists.txt  README.md  stack_overflow.cpp  stack_overflow_bypass_aslr.cpp  stack_overflow_bypass_canary.cpp  stack_overflow_bypass_nx.cpp
exploit/try1/: CMakeLists.txt  README.md  main.cpp
exploit/try2/: CMakeLists.txt  main.cpp
patterns/: CMakeLists.txt
patterns/policy/: main.cpp  seccomp_policy.h
patterns/policy/selinux/: policy.fc  policy.if  policy.te
patterns/sandboxing/: main.cpp
patterns/secure_logging/: main.cpp
patterns/secure_storage/: encrypted_storage.cpp  encrypted_storage.h  json_storage.cpp  json_storage.h  main.cpp  storage.h
patterns/single_use_object/: main.cpp  memzero.h  secure_data.h  single_use.h
patterns/value_object/: main.cpp
tools/compile/: CMakeLists.txt  main.cpp
tools/dast/: CMakeLists.txt  main.cpp
tools/format/: .clang-format
tools/fuzzing/: CMakeLists.txt  build_and_fuzz.sh  target.cpp
tools/fuzzing/corpus/: sample.json
tools/linter/: uninitialized.cpp
tools/sast/: analize.sh  main.cpp
